adding consent feature to initial queries.html and stylings for it in Eproms and Truenth

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -47,7 +47,7 @@ body {
   height: 71px;
 }
 #tnthNavWrapper {
-  display:none;
+  /*display:none;*/
   visibility: hidden;
   -webkit-transition: visibility 0.5s ease-in;
   transition: visibility 0.5s ease-in;
@@ -851,6 +851,37 @@ color: #777
 
 .tooltip.top > .tooltip-arrow {
     border-top: 5px solid #979a8d;
+}
+
+#consentContainer .consent {
+  display: none;
+  padding: 1.15em 1.3em;
+  color: #57675B;
+  font-size: 0.95em;
+  width: 100%;
+  max-width: 100%;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+
+}
+#consentContainer label {
+  font-weight: normal;
+  margin-left: 6px;
+}
+
+#consentContainer a {
+  color:#696f69;
+  margin-left: 1.3em;
+  font-size: 0.9em
+}
+#consentContainer a:hover {
+  color: #979a8d;
+}
+.consent-checkbox {
+  margin-left:-2px;
+  margin-right: 8px;
+  position:relative;
+  top:-2px;
 }
 
 
