adding stylings for challenge form to portal.css/less

--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -953,6 +953,21 @@ color: #777
   top:-2px;
 }
 
+#identityVerificationContainer {
+  width: 50%;
+  padding: 2em 3em;
+  margin: 1em 0;
+  border: 1px solid @sectionBorderColor;
+  border-radius: 4px;
+  input {
+    width: 100%;
+    max-width: 100%;
+  }
+  .form-group {
+    margin-bottom: 1em;
+  }
+}
+
 
 /** Responsive sizes **/
 @media (max-width: 480px) {
@@ -1020,6 +1035,20 @@ color: #777
     width: 90%;
     max-width: 100%;
   }
+
+  #identityVerificationContainer {
+    width: 100%;
+    max-width: 100%;
+    input {
+      width: 100%;
+      max-width: 100%;
+    }
+    select {
+      width: 100%;
+      max-width: 100%;
+    }
+  }
+  
 }
 
 @media (max-width: 730) {
