--- a/portal/templates/challenge_identity.html
+++ b/portal/templates/challenge_identity.html
@@ -10,7 +10,7 @@
 
     <p class="profile-item-title">To ensure your personal details are not shared with others, please enter the following data for account confirmation.</p>
 
-    <form action="/challenge" method="post">
+    <form  action="/challenge" method="post">
 
          {{ form.hidden_tag() }}
         <div id="identityVerificationContainer">
@@ -37,17 +37,25 @@
 
 {% block document_ready %}
 $(document).ready(function() {
+
+    var now = new Date();
+    //50 years ago
+    var _defaultDate = new Date(now.getFullYear()-50,now.getMonth(),now.getDate());
+   
     //html5 native date input field is only recognized in Chrome/Opera, and not others so use bootstrap datepicker object instead
-    $("#identityVerificationContainer").find("#birthdate").prop("type", "text").attr("placeholder", "yyyy-mm-dd").attr("pattern", "(?:19|20)[0-9]{2}-(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1[0-9]|2[0-9])|(?:(?!02)(?:0[1-9]|1[0-2])-(?:30))|(?:(?:0[13578]|1[02])-31))");
+    $("#identityVerificationContainer").find("#birthdate").prop("type", "text").attr("placeholder", "mm-dd-yyyy").attr("pattern", "(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1[0-9]|2[0-9])|(?:(?!02)(?:0[1-9]|1[0-2])-(?:30))|(?:(?:0[13578]|1[02])-31))-(?:19|20)[0-9]{2}");
     $("#birthdate")
-    .datepicker({format: "yyyy-mm-dd", autoclose: true, immediateUpdates: true, startDate: "1920-01-01"})
+    .datepicker({format: "mm-dd-yyyy", autoclose: true, startDate: "01-01-1920"})
     .on('changeDate', function (ev) {
-        $(this).datepicker('hide');
+        $(this).datepicker("hide");
     })
     .on('clearDate', function(ev) {
-        $(this).datepicker('show')
+        $(this).datepicker("show");
     });
 
+    $("#birthdate").datepicker("setDate", _defaultDate);
+    $("#birthdate").datepicker("update");
+    $("#birthdate").val("");
 
 });
 {% endblock %}
