--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -51,7 +51,19 @@ body {
   font-size: @baseFontSize;
 }
 
-#fullSizeBox a[href*="register"] {
+#fullSizeBox {
+  a[href*="register"] {
+    display: none;
+  }
+  a[href*="google"] {
+    display: none;
+  }
+  a[href*="facebook"] {
+    display: none;
+  }
+}
+
+#socialMediaRegistrationContainer {
   display: none;
 }
 
