--- a/portal/templates/flask_user/_macros.html
+++ b/portal/templates/flask_user/_macros.html
@@ -12,13 +12,13 @@
                 {% endfor %}
             {% else %}
                 {% if helpText %}
-                    <span>{{ helpText|safe }}</span>
+                    <div class="text-muted" style="margin-left: 8px;font-size:0.87em">{{ helpText|safe }}</div>
                 {% endif %}
             {% endif %}
         </div>
     </div>
 {%- endmacro %}
- 
+
 {% macro render_checkbox_field(field, label=None, helpText=false) -%}
     {% if not label %}{% set label=field.label.text %}{% endif %}
     <div class="checkbox">
@@ -30,7 +30,7 @@
         {% endif %}
     </div>
 {%- endmacro %}
- 
+
 {% macro render_radio_field(field) -%}
     {% for value, label, checked in field.iter_choices() %}
         <div class="radio">
