--- a/portal/templates/flask_user/register.html
+++ b/portal/templates/flask_user/register.html
@@ -3,32 +3,36 @@
 {% block content %}
 {% from "flask_user/_macros.html" import render_field, render_submit_field, back_btn %}
 
-<h3 class="tnth-headline">Register for TrueNTH</h3>
+<h4 class="tnth-headline">Register for TrueNTH</h4>
 
-<p>Register using:</p>
+<hr/>
+<div id="socialMediaRegistrationContainer">
+    <p class="profile-item-title">Register using:</p>
 
-<div style="margin-left: 1em">
-    <a href="{{ url_for('auth.login', provider_name='facebook', next=request.args.get('next')) }}"
-       class="btn btn-social btn-facebook">
-        <i class="fa fa-facebook"></i>
-        Facebook
-    </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="{{ url_for('auth.login', provider_name='google', next=request.args.get('next')) }}"
-       class="btn btn-social btn-google">
-        <i class="fa fa-google"></i>
-        Google
-    </a>
+    <div style="margin-left: 1em">
+        <a href="{{ url_for('auth.login', provider_name='facebook', next=request.args.get('next')) }}"
+           class="btn btn-social btn-facebook">
+            <i class="fa fa-facebook"></i>
+            Facebook
+        </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="{{ url_for('auth.login', provider_name='google', next=request.args.get('next')) }}"
+           class="btn btn-social btn-google">
+            <i class="fa fa-google"></i>
+            Google
+        </a>
+    </div>
+
+    <div style="margin-top: 0.5em">
+        <a class="small-text" href="#" data-toggle="modal" data-target="#accountModal">Learn more about using Facebook or Google to sign up for TrueNTH.</a>
+    </div>
+    <hr/>
 </div>
-<div style="margin-top: 0.5em">
-    <a class="small-text" href="#" data-toggle="modal" data-target="#accountModal">Learn more about using Facebook or Google to sign up for TrueNTH.</a>
-</div>
-<p style="margin-top: 1.5em">Or create a TrueNTH account:</p>
+<p  id="createAcctTxt" class="profile-item-title" style="margin-top: 1.5em">Or create a TrueNTH account:</p>
 <form id="regForm" action="" method="POST" novalidate formnovalidate class="form to-validate" role="form" style="margin-left: 1em">
 
     <div class="row">
-        <div class="col-md-7">
+        <div class="col-md-7 col-xs-9 profile-item-container" style="padding: 2.9em 2.5em">
             {{ form.hidden_tag() }}
-
             {# Username or Email #}
             {% set field = form.username if user_manager.enable_username else form.email %}
             {{ render_field(field, label="Email address", label_visible=false, tabindex=220, required="required", data_error="Email address is required." ) }}
@@ -43,8 +47,9 @@
             {{ render_field(form.retype_password, label="Retype Password", label_visible=false, data_match="#password", data_match_error="Oops, the two password fields do not match.", tabindex=240) }}
             {% endif %}
 
-            {{ render_submit_field(form.submit, "Register", tabindex=280) }}
+            <br/>
 
+            {{ render_submit_field(form.submit, "Register", tabindex=280) }}
         </div>
 
     </div>
@@ -84,6 +89,28 @@ $(document).ready(function(){
         var theMsg = $(this).attr("data-match_error");
         $(this).attr("data-match-error", theMsg);
     });
+    if (!$("#socialMediaRegistrationContainer").is(":visible")) {
+        $("#createAcctTxt").text("Create a TrueNTH account");
+    }
+
+    var qs = (function(a) {
+    if (a == "") return {};
+    var b = {};
+    for (var i = 0; i < a.length; ++i)
+    {
+        var p=a[i].split('=', 2);
+        if (p.length == 1)
+            b[p[0]] = "";
+        else
+            b[p[0]] = decodeURIComponent(p[1].replace(/\+/g, " "));
+    }
+    return b;
+    })(window.location.search.substr(1).split('&'));
+
+    if (qs["email"]) $("#email").val(qs["email"]);
+
+
+
 });
 
 {% endblock %}
