adding styling to register form

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -983,6 +983,11 @@ color: #777
   }
 }
 
+.box-shadow-container {
+-webkit-box-shadow: 8px 8px 5px -5px rgba(133,140,134,1);
+-moz-box-shadow: 8px 8px 5px -5px rgba(133,140,134,1);
+box-shadow: 8px 8px 5px -5px rgba(133,140,134,1);
+}
 
 /** Responsive sizes **/
 @media (max-width: 480px) {
