--- a/portal/templates/flask_user/register.html
+++ b/portal/templates/flask_user/register.html
@@ -27,11 +27,11 @@
     </div>
     <hr/>
 </div>
-<p  id="createAcctTxt" class="profile-item-title" style="margin-top: 1.5em">Or create a TrueNTH account:</p>
+<p  id="createAcctTxt" class="profile-item-title" style="margin-top: 1.5em">Or create an account:</p>
 <form id="regForm" action="" method="POST" novalidate formnovalidate class="form to-validate" role="form" style="margin-left: 1em">
 
     <div class="row">
-        <div class="col-md-7 col-xs-9 profile-item-container" style="padding: 2.9em 2.5em">
+        <div class="col-md-7 col-xs-10 profile-item-container box-shadow-container" style="padding: 2.9em 2.5em">
             {{ form.hidden_tag() }}
             {# Username or Email #}
             {% set field = form.username if user_manager.enable_username else form.email %}
@@ -90,7 +90,7 @@ $(document).ready(function(){
         $(this).attr("data-match-error", theMsg);
     });
     if (!$("#socialMediaRegistrationContainer").is(":visible")) {
-        $("#createAcctTxt").text("Create a TrueNTH account");
+        $("#createAcctTxt").text("Create an account");
     }
 
     var qs = (function(a) {
@@ -108,8 +108,6 @@ $(document).ready(function(){
     })(window.location.search.substr(1).split('&'));
 
     if (qs["email"]) $("#email").val(qs["email"]);
-
-
 
 });
 
