--- a/portal/templates/flask_user/register.html
+++ b/portal/templates/flask_user/register.html
@@ -2,36 +2,44 @@
 
 {% block content %}
 {% from "flask_user/_macros.html" import render_field, render_submit_field, back_btn %}
-
-<h4 class="tnth-headline">Register for TrueNTH</h4>
-
-<hr/>
-<div id="socialMediaRegistrationContainer">
-    <p class="profile-item-title">Register using:</p>
-
-    <div style="margin-left: 1em">
-        <a href="{{ url_for('auth.login', provider_name='facebook', next=request.args.get('next')) }}"
-           class="btn btn-social btn-facebook">
-            <i class="fa fa-facebook"></i>
-            Facebook
-        </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="{{ url_for('auth.login', provider_name='google', next=request.args.get('next')) }}"
-           class="btn btn-social btn-google">
-            <i class="fa fa-google"></i>
-            Google
-        </a>
+<div class="row">
+    <div class="col-md-push-1 col-md-7 col-xs-10">
+        <h4 class="tnth-headline">Register for TrueNTH</h4>
     </div>
-
-    <div style="margin-top: 0.5em">
-        <a class="small-text" href="#" data-toggle="modal" data-target="#accountModal">Learn more about using Facebook or Google to sign up for TrueNTH.</a>
-    </div>
-    <hr/>
 </div>
-<p  id="createAcctTxt" class="profile-item-title" style="margin-top: 1.5em">Or create an account:</p>
+ <hr style="position: relative; top:-12px"/>
+<div class="row" id="socialMediaRegistrationContainer">
+    <div class="col-md-push-2 col-md-7 col-xs-10">
+        <p class="profile-item-title">Register using:</p>
+
+        <div style="margin-left: 1em">
+            <a href="{{ url_for('auth.login', provider_name='facebook', next=request.args.get('next')) }}"
+               class="btn btn-social btn-facebook">
+                <i class="fa fa-facebook"></i>
+                Facebook
+            </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="{{ url_for('auth.login', provider_name='google', next=request.args.get('next')) }}"
+               class="btn btn-social btn-google">
+                <i class="fa fa-google"></i>
+                Google
+            </a>
+        </div>
+
+        <div style="margin-top: 0.5em">
+            <a class="small-text" href="#" data-toggle="modal" data-target="#accountModal">Learn more about using Facebook or Google to sign up for TrueNTH.</a>
+        </div>
+        <hr/>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-push-2 col-md-7 col-xs-10">
+        <p  id="createAcctTxt" class="profile-item-title" style="margin-top: 1.5em">Or create an account:</p>
+    </div>
+</div>
 <form id="regForm" action="" method="POST" novalidate formnovalidate class="form to-validate" role="form" style="margin-left: 1em">
 
-    <div class="row">
-        <div class="col-md-7 col-xs-10 profile-item-container box-shadow-container" style="padding: 2.9em 2.5em">
+    <div class="row" style="margin: 0 auto">
+        <div class="col-md-push-2 col-md-7 col-xs-10 profile-item-container box-shadow-container" style="padding: 2.9em 2.5em">
             {{ form.hidden_tag() }}
             {# Username or Email #}
             {% set field = form.username if user_manager.enable_username else form.email %}
@@ -90,7 +98,7 @@ $(document).ready(function(){
         $(this).attr("data-match-error", theMsg);
     });
     if (!$("#socialMediaRegistrationContainer").is(":visible")) {
-        $("#createAcctTxt").text("Create an account");
+        $("#createAcctTxt").text("Create an account").css("margin-top", "0.2em");
     }
 
     var qs = (function(a) {
