--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -968,6 +968,12 @@ color: #777
   }
 }
 
+.box-shadow-container {
+-webkit-box-shadow: 7px 8px 7px -7px rgba(79,82,80,1);
+-moz-box-shadow: 7px 8px 7px -7px rgba(79,82,80,1);
+box-shadow: 7px 8px 7px -7px rgba(79,82,80,1);
+}
+
 
 /** Responsive sizes **/
 @media (max-width: 480px) {
@@ -1048,7 +1054,7 @@ color: #777
       max-width: 100%;
     }
   }
-  
+
 }
 
 @media (max-width: 730) {
