--- a/portal/templates/challenge_identity.html
+++ b/portal/templates/challenge_identity.html
@@ -30,7 +30,7 @@
                 </div>
             </div>
         </div>
-        <button type="submit" class="btn btn-tnth-primary">Confirm Identity</button>
+        &nbsp;&nbsp;<button type="submit" class="btn btn-tnth-primary">Confirm Identity</button>
     </form>
 
 {% endblock %}
@@ -41,11 +41,11 @@ $(document).ready(function() {
     var now = new Date();
     //50 years ago
     var _defaultDate = new Date(now.getFullYear()-50,now.getMonth(),now.getDate());
-   
+
     //html5 native date input field is only recognized in Chrome/Opera, and not others so use bootstrap datepicker object instead
     $("#identityVerificationContainer").find("#birthdate").prop("type", "text").attr("placeholder", "mm-dd-yyyy").attr("pattern", "(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1[0-9]|2[0-9])|(?:(?!02)(?:0[1-9]|1[0-2])-(?:30))|(?:(?:0[13578]|1[02])-31))-(?:19|20)[0-9]{2}");
     $("#birthdate")
-    .datepicker({format: "mm-dd-yyyy", autoclose: true, clearBtn: true, defaultViewDate: {year:_defaultDate.getFullYear(), month:_defaultDate.getMonth(), day:_defaultDate.getDate()}, forceParse: false, startDate: "01-01-1920"})
+    .datepicker({format: "mm-dd-yyyy", autoclose: true, defaultViewDate: {year:_defaultDate.getFullYear(), month:_defaultDate.getMonth(), day:_defaultDate.getDate()}, forceParse: false, startDate: "01-01-1920"})
     .on('changeDate', function (ev) {
         $(this).datepicker("hide");
     })
@@ -56,6 +56,21 @@ $(document).ready(function() {
     $("#birthdate").datepicker("setDate", _defaultDate);
     $("#birthdate").datepicker("update");
     $("#birthdate").val("");
+
+    $("#birthdate").on("keydown", function(ev) {
+        if (ev.keyCode === 8 || ev.keyCode === 46 || ev.keyCode === 37 || ev.keyCode === 39) return; //backspace or delete or right or left arrow key
+        var match0 = /^\d{3}$/;
+        var match         = /^\d{2}[-]?\d{2}[-]?\d{1,4}$/;  //11-111
+        var d = $(this).val();
+        //if (match1.test(d)) d = d.slice(0, 2) + "-" + d.slice(2);
+        if (match0.test(d)) {
+            d = d.slice(0, 2) + "-" + d.slice(2);
+        } else if (match.test(d)) {
+            d = d.replace(/-/g, "");
+            d = d.slice(0, 2) + "-" + d.slice(2,4) + "-" + d.slice(4);
+        }
+        $(this).val(d);
+    });
 
 });
 {% endblock %}
