--- a/portal/templates/flask_user/register.html
+++ b/portal/templates/flask_user/register.html
@@ -3,13 +3,13 @@
 {% block content %}
 {% from "flask_user/_macros.html" import render_field, render_submit_field, back_btn %}
 <div class="row">
-    <div class="col-md-push-1 col-md-7 col-xs-10">
+    <div class="col-md-push-1 col-md-7 col-xs-11">
         <h4 class="tnth-headline">Register for TrueNTH</h4>
     </div>
 </div>
- <hr style="position: relative; top:-12px"/>
+ <hr style="position: relative; top:-16px"/>
 <div class="row" id="socialMediaRegistrationContainer">
-    <div class="col-md-push-2 col-md-7 col-xs-10">
+    <div class="col-md-push-2 col-md-7 col-xs-11">
         <p class="profile-item-title">Register using:</p>
 
         <div style="margin-left: 1em">
@@ -32,14 +32,14 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-md-push-2 col-md-7 col-xs-10">
+    <div class="col-md-push-2 col-md-7 col-xs-11">
         <p  id="createAcctTxt" class="profile-item-title" style="margin-top: 1.5em">Or create an account:</p>
     </div>
 </div>
 <form id="regForm" action="" method="POST" novalidate formnovalidate class="form to-validate" role="form" style="margin-left: 1em">
 
     <div class="row" style="margin: 0 auto">
-        <div class="col-md-push-2 col-md-7 col-xs-10 profile-item-container box-shadow-container" style="padding: 2.9em 2.5em">
+        <div class="col-md-push-2 col-md-7 col-xs-11 profile-item-container box-shadow-container" style="padding: 2.9em 2.5em">
             {{ form.hidden_tag() }}
             {# Username or Email #}
             {% set field = form.username if user_manager.enable_username else form.email %}
@@ -97,7 +97,7 @@ $(document).ready(function(){
         $(this).attr("data-match-error", theMsg);
     });
     if (!$("#socialMediaRegistrationContainer").is(":visible")) {
-        $("#createAcctTxt").text("Create an account").css("margin-top", "0.2em");
+        $("#createAcctTxt").text("Create an account").css({"margin-top": "0", "margin-left": "0.9em"});
     }
 
     var qs = (function(a) {
