--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -14,7 +14,7 @@
 @lgsubheadSize:   1.20em;
 @smallerText:     0.85em;
 @btnSize:         1em;
-@legendSize:      1em;
+@legendSize:      0.90em;
 @sessionListSize: 0.95em;
 @orgSize:         0.99em;
 
@@ -481,6 +481,7 @@ a.btn {
 #fillOrgs legend {
   font-size:@legendSize;
   color: @legendColor;
+  margin: 4px 0 4px 0;
 }
 
 #fillOrgs, .noOrg-container{
