--- a/portal/templates/patients_by_org.html
+++ b/portal/templates/patients_by_org.html
@@ -13,8 +13,8 @@
     <p>Skip to:</p>
     <ul>
         {% set orgCountLink = 1 %}
-        {% for key, value in patients_by_org| dictsort %}
-        <li><a href="#location{{orgCountLink}}">{{ key[(key.index('|') + 1): ] }}</a></li>
+        {% for org in patients_by_org.keys() %}
+        <li><a href="#location{{orgCountLink}}">{{ org }}</a></li>
         {% set orgCountLink = orgCountLink + 1 %}
         {% endfor %}
     </ul>
@@ -25,9 +25,9 @@
 <hr />
 
 {% set orgCount = 1 %}
-{% for key, value in patients_by_org| dictsort %}
+{% for org in patients_by_org.keys() %}
 <div class="admin-table table-responsive smaller-text">
-    <h4 id="location{{orgCount}}">{{ key[key.index('|') + 1:] }} Patients</h4>
+    <h4 id="location{{orgCount}}">{{ org }} Patients</h4>
 
 {% if config.PROVIDER_BULK_DATA_ACCESS %}
 
